# LuaTemplate

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: game.hpp
src/: CMakeLists.txt  entities.lua  entity.lua  game.cpp  main.cpp  main.lua
tests/: CMakeLists.txt  main.cpp
